--- a/src/main/resources/static/css/viewGuest.css
+++ b/src/main/resources/static/css/viewGuest.css
@@ -1,13 +1,13 @@
-.container {
-  padding: 2rem 0rem;
+/* viewNotes */
+.table-hover tbody tr:hover td {
+    background: aqua;
 }
 
-h4 {
-  margin: 2rem 0rem 1rem;
+/* guestEntry */
+.purple-border textarea {
+   border: 1px solid #ba68c8;
 }
-
-.table-image {
-  td, th {
-    vertical-align: middle;
-  }
+.purple-border .form-control:focus {
+    border: 1px solid #ba68c8;
+    box-shadow: 0 0 0 0.2rem rgba(186, 104, 200, .25);
 }
